<?xml version="1.0" encoding="utf-8"?>

<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/darkgray" >

    <TextView android:id="@+id/type_day"
        android:text="@string/type_day"
        android:background="@drawable/rounded_rectangle_light_gray"
        style="@style/periodic_type_textview_theme" />
    <TextView android:id="@+id/type_week"
        android:text="@string/type_week"
        android:background="@drawable/rounded_rectangle_light_gray"
        style="@style/periodic_type_textview_theme" />
    <TextView android:id="@+id/type_month"
        android:text="@string/type_month"
        android:background="@drawable/rounded_rectangle_light_gray"
        style="@style/periodic_type_textview_theme" />
    <TextView android:id="@+id/type_quarter"
        android:text="@string/type_quarter"
        android:background="@drawable/rounded_rectangle_light_gray"
        style="@style/periodic_type_textview_theme" />
    <TextView android:id="@+id/type_year"
        android:text="@string/type_year"
        android:background="@drawable/rounded_rectangle_light_gray"
        style="@style/periodic_type_textview_theme" />
    <Spinner android:id="@+id/spinner_period"
        android:layout_weight="1"
        android:padding="2dp"
        android:gravity="center"
        android:background="@drawable/rounded_rectangle_light_gray"
        android:drawSelectorOnTop = "true"
        style="@android:style/Widget.Holo.Spinner" />

</TableRow>