<?xml version="1.0" encoding="utf-8"?>

<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/stock_self_list_op"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="30dp"
    android:layout_marginBottom="10dp"
    android:layout_marginRight="@dimen/navigation_drawer_margin_right"
    android:layout_below="@id/sz_stock"
    android:layout_toRightOf="@+id/stock_count" >

    <ImageView android:id="@+id/expand_stock"
        android:contentDescription="@string/expand_stock_self_list"
        style="@style/stock_self_list_op_theme"
        android:src="@drawable/full_screen_expand_circle_24" />
    <ImageView android:id="@+id/share_info"
        android:contentDescription="@string/share_stock_info"
        style="@style/stock_self_list_op_theme"
        android:src="@drawable/share_1_circle_24" />
    <ImageView android:id="@+id/add_stock"
        android:contentDescription="@string/add_stock"
        style="@style/stock_self_list_op_theme"
        android:src="@drawable/add_circle_24" />
    <ImageView android:id="@+id/delete_stock"
        android:contentDescription="@string/del_stock"
        style="@style/stock_self_list_op_theme"
        android:src="@drawable/garbage_delete_circle_24" />

</TableRow>