<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.msolo.stockeye.gui.fragment.FragmentLogin">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/login_copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:text="@string/copyright"
        android:textSize="12sp" />

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_alignParentLeft="true"
        android:layout_above="@id/login_copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" >

            <TextView
                android:id="@+id/facebook_login"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="#3289DA"
                android:drawableLeft="@drawable/facebook_circle_32"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:text="Facebook" />
            <TextView
                android:id="@+id/googleplus_login"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="#D0422B"
                android:drawableLeft="@drawable/googleplus_circle_32"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:text="Google+" />
            <TextView
                android:id="@+id/twitter_login"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="#00ACF0"
                android:drawableLeft="@drawable/twitter_circle_32"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:text="Twitter" />

        </TableRow>

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/login_image"
            android:layout_width="81dp"
            android:layout_height="81dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/login_image"
            android:layout_gravity="center"
            app:border_width="1dp"
            app:border_color="@color/white" />

        <AutoCompleteTextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:background="@drawable/border_bottom_white"
            android:maxLines="1"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/prompt_password"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:background="@drawable/border_bottom_white"
            android:maxLines="1"
            android:singleLine="true"/>

        <Button
            android:id="@+id/email_sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/rounded_rectangle_skyblue"
            android:layout_gravity="right"
            android:gravity="right"
            android:textSize="14sp"
            android:text="@string/action_sign_in"
            android:textColor="@color/white" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:src="@drawable/homepage_title" />

    </LinearLayout>

</RelativeLayout>

